[package]
name = "ymodem"
version = "0.1.1"
authors = ["Allen Welkie <allen.welkie@gmail.com>", "Eliud de León <eliud.deleon.10@gmail.com>"]
keywords = ["xmodem", "ymodem", "serial"]
repository = "https://github.com/TGMM/xymodem.rs"
license = "MIT"
description = "An implementation of the XMODEM and YMODEM file-transfer protocols."

[[bin]]
name = "xymodem-test"
path = "src/test.rs"

[dependencies]
log = "^0.3"
crc16 = "^0.3"
serialport = "^4.0.1"

[dev-dependencies]
tempfile = "^2.0"
rand = "^0.3"
